--- a/stopWatch/cssPage.css
+++ b/stopWatch/cssPage.css
@@ -8,6 +8,7 @@ main {
     width: 100vw;
     height: 100vh;
     background-color: goldenrod;
+    font-family: 'Roboto', sans-serif;
 
     display: flex;
     flex-direction: column;
