added JS file and completed project!

--- a/drumKit/cssPage.css
+++ b/drumKit/cssPage.css
@@ -56,6 +56,8 @@ section div img {
     border-radius: 0.3rem;
     position: absolute;
     z-index: 3;
+    cursor: pointer;
+    transition: all ease-in-out .05s;
 }
 
 #crash {
@@ -110,8 +112,9 @@ section div img {
     border: 2px solid black;
     border-radius: 0.5rem;
     z-index: 4;
+    transition: all ease-in-out 0.05s;
 }
 
 .behaviour {
-    transform: scale(1.01);
+    transform: scale(1.1);
 }
