--- a/ticTacToe/CSSpage.css
+++ b/ticTacToe/CSSpage.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Noto+Sans+JP:wght@100;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Noto+Sans+JP:wght@100;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-weight: 800;
+    font-family: 'Carter One', cursive;
+}
+
+body {
+    position: relative;
 }
 
 main {
@@ -31,12 +38,79 @@ main {
     color: white;
     border-radius: 0.5rem;
     font-size: 2.5rem;
-    font-weight: 800;
-    font-family: 'Carter One', cursive;
     box-shadow: 2px 2px 5px 0 grey;
     cursor: pointer;
 
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.modalContainer {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(128, 128, 128,0.08);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    width: 35rem;
+    height: 15rem;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 1rem 0 #acabab91,
+        -1px -1px 1rem 0 #acabab91,
+        1px -1px 1rem 0 #acabab91,
+        -1px 1px 1rem 0 #acabab91;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 2rem;
+    animation: pop-up 0.08s ease-in-out forwards;
+    transform: scale(0.6);
+}
+
+@keyframes pop-up {
+    25% {
+        transform: scale(0.7);
+    }
+
+    50% {
+        transform: scale(0.8);
+    }
+
+    75% {
+        transform: scale(0.9);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.modal span {
+    font-size: 2.8rem;
+    font-weight: 100;
+}
+
+.modal button {
+    font-size: 1.3rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    cursor: pointer;
+    border-radius: 0.8rem;
+    border: 1px solid black;
+    font-family: 'Roboto', cursive;
+    background-color: #1d1a1a;
+    color: white;
 }
