--- a/pairsGame/CSSpage.css
+++ b/pairsGame/CSSpage.css
@@ -15,7 +15,8 @@ body {
 nav {
     width: 100%;
     height: 15vh;
-    background-color: pink;
+    color: white;
+    /* background-color: pink; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,7 +24,7 @@ nav {
 
 main {
     width: 100%;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
 
     display: flex;
     justify-content: center;
@@ -45,7 +46,7 @@ main .container span {
     width: 4.5rem;
     height: 4rem;
     color: white;
-    background-color: grey;
+    background-color: #FF7A0D;
     border-radius: 0.5rem;
     font-size: 1.5rem;
     font-weight: 600;
@@ -53,4 +54,9 @@ main .container span {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+main .container span img{
+    width: 60%;
+    height: 60%;
 }
