--- a/pairsGame/CSSpage.css
+++ b/pairsGame/CSSpage.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;600;700&family=Carter+One&family=Noto+Sans+JP:wght@100;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -16,15 +19,16 @@ nav {
     width: 100%;
     height: 15vh;
     color: white;
-    /* background-color: pink; */
+    font-size: 2.3rem;
+    font-family: 'AR One Sans', sans-serif;
+
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
 }
 
 main {
     width: 100%;
-    /* background-color: antiquewhite; */
 
     display: flex;
     justify-content: center;
@@ -33,8 +37,6 @@ main {
 }
 
 main .container {
-    /* background-color: aquamarine; */
-
     display: grid;
     grid-template-rows: repeat(5, 1fr);
     grid-template-columns: repeat(6, 1fr);
@@ -56,7 +58,7 @@ main .container span {
     align-items: center;
 }
 
-main .container span img{
+main .container span img {
     width: 60%;
     height: 60%;
 }
