--- a/pairsGame/CSSpage.css
+++ b/pairsGame/CSSpage.css
@@ -11,6 +11,8 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: #1F4076;
+    position: relative;
+
     display: flex;
     flex-direction: column;
 }
@@ -61,4 +63,65 @@ main .container span {
 main .container span img {
     width: 60%;
     height: 60%;
+}
+
+.modal {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(128, 128, 128, 0.708);
+    font-family: 'AR One Sans', sans-serif;
+    position: absolute;
+    top: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal .modalContainer {
+    width: 40%;
+    height: 40%;
+    background-color: #fd8727;
+    color: white;
+    border-radius: 2rem;
+    font-size: 2.5rem;
+    font-weight: 600;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 1.5rem;
+
+    animation: pop-up 0.08s ease-in-out forwards;
+    transform: scale(0.6);
+}
+
+.modal .modalContainer button {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    border-radius: 1rem;
+    cursor: pointer;
+}
+
+@keyframes pop-up {
+    25% {
+        transform: scale(0.7);
+    }
+
+    50% {
+        transform: scale(0.8);
+    }
+
+    75% {
+        transform: scale(0.9);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
