--- a/myPortfolio/CSSpage.css
+++ b/myPortfolio/CSSpage.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;600;700&family=Carter+One&family=Noto+Sans+JP:wght@100;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;500;600;700&family=Comfortaa:wght@300;400;500;600;700&family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 
 
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Comfortaa', sans-serif;
 }
 
 body {
@@ -14,6 +14,8 @@ body {
     flex-direction: column;
     justify-content: start;
     align-items: center;
+    background-color: #222222;
+    color: white;
 }
 
 nav {
@@ -22,6 +24,7 @@ nav {
     padding-left: 12rem;
     font-size: 1rem;
     font-weight: 600;
+    color: white;
 
     display: flex;
     justify-content: start;
@@ -30,7 +33,7 @@ nav {
 
 nav a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 .nav-icon {
@@ -47,11 +50,11 @@ nav span:nth-of-type(2) {
 nav button {
     padding-left: 1rem;
     padding-right: 1rem;
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
     font-size: 1rem;
     font-weight: 600;
-    background-color: black;
+    background-color: #D65E4F;
     color: white;
     border-radius: 0.5rem;
     cursor: pointer;
@@ -75,6 +78,7 @@ main .introduction {
     width: 100%;
     height: 110vh;
     display: flex;
+    color: white;
 }
 
 main .introduction .sidebar {
@@ -90,7 +94,7 @@ main .introduction .sidebar {
 }
 
 .sidebar a {
-    color: black;
+    color: white;
 }
 
 .introduction .introContent {
@@ -112,8 +116,8 @@ main .introduction .sidebar {
 
 .name {
     width: 90%;
-    font-size: 3.2rem;
-    font-weight: 800;
+    font-size: 4rem;
+    font-weight: 900;
 
     display: flex;
     flex-direction: column;
@@ -127,19 +131,20 @@ main .introduction .sidebar {
 
 .profession {
     font-size: 1.2rem;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .about {
     width: 90%;
     margin-top: 2rem;
+    font-weight: 400;
 }
 
 .logo {
     width: 10rem;
     height: 10rem;
     border-radius: 50%;
-    background-color: rgb(145, 145, 145);
+    background-color: #E58D83;
     margin-top: 2rem;
     margin-left: auto;
     margin-right: auto;
@@ -155,7 +160,7 @@ main .introduction .sidebar {
     font-size: 1.5rem;
     font-weight: 600;
     border-radius: 50%;
-    background-color: rgb(65, 64, 64);
+    background-color: #D65E4F;
     color: white;
     display: flex;
     flex-direction: column;
@@ -174,8 +179,6 @@ main .introduction .sidebar {
     padding-left: 0.7rem;
     padding-right: 0.7rem;
 }
-
-
 
 .introContent .introContentRight {
     width: 50%;
@@ -214,8 +217,8 @@ main .introduction .sidebar {
     width: 100%;
     height: 15vh;
     padding-left: 12rem;
-    font-size: 2.5rem;
-    font-weight: 700;
+    font-size: 2.8rem;
+    font-weight: 800;
 
     display: flex;
     justify-content: start;
@@ -235,11 +238,17 @@ main .introduction .sidebar {
 .projects .project {
     width: 80%;
     min-height: 10rem;
-    border: 1px solid black;
     border-radius: 0.8rem;
+    background-color: #E9E9E9;
+    color: black;
     overflow: hidden;
 
     display: flex;
+}
+
+.project:nth-of-type(2){
+    background-color: #F06D55; 
+    color: white;
 }
 
 .project .leftPart {
@@ -255,7 +264,7 @@ main .introduction .sidebar {
 
 .project .leftPart video {
     width: 100%;
-    border: 1px solid white;
+    border: 1px solid black;
 }
 
 .project .rightPart {
@@ -271,17 +280,18 @@ main .introduction .sidebar {
 .project .rightPart .title {
     width: 100%;
     font-size: 1.8rem;
-    font-weight: 700;
+    font-weight: 900;
 }
 
 .project .rightPart .title a {
     text-decoration: none;
+    color: black;
 }
 
 .project .rightPart .description {
     width: 100%;
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 100;
 }
 
 .project .rightPart .technologies {
@@ -295,9 +305,10 @@ main .introduction .sidebar {
 }
 
 .project .rightPart .technologies span {
-    background-color: cornflowerblue;
-    font-size: 0.8rem;
-    font-weight: 600;
+    background-color: #D65E4F;
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
     border-radius: 0.5rem;
 
     padding-left: 1rem;
@@ -306,12 +317,19 @@ main .introduction .sidebar {
     padding-bottom: 0.5rem;
 }
 
+.project:nth-of-type(2) .rightPart .technologies span{
+    background-color: black;
+}
+
+.project:nth-of-type(2) .rightPart a{
+    color: white;
+}
+
 /* footer */
 footer {
     width: 100%;
     height: auto;
     padding: 3rem;
-    background-color: rgb(23, 23, 23);
     color: white;
 
     display: flex;
@@ -327,13 +345,14 @@ footer h2 {
 }
 
 footer .personalInfo {
-    font-size: 1rem;
+    font-size: 0.9rem;
+    font-weight: 600;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 0.5rem;
+    row-gap: 0.8rem;
 }
 
 footer .personalInfo a {
@@ -342,8 +361,8 @@ footer .personalInfo a {
 }
 
 footer .personalInfo span:nth-of-type(2) {
-    font-size: 1.2rem;
-    font-weight: 600;
+    font-size: 1.1rem;
+    font-weight: 800;
 }
 
 .footer-icons {
@@ -366,7 +385,6 @@ footer .personalInfo span:nth-of-type(2) {
     height: auto;
     padding-top: 2rem;
     padding-bottom: 5rem;
-    /* background-color: rgb(23, 23, 23); */
 
     display: flex;
     flex-direction: column;
@@ -378,7 +396,8 @@ footer .personalInfo span:nth-of-type(2) {
 .skillSection .heading {
     justify-content: center;
     padding: 0;
-    /* color: white; */
+    font-size: 2.8rem;
+    font-weight: 800;
 }
 
 .skillSection .technologies {
