--- a/myPortfolio/CSSpage.css
+++ b/myPortfolio/CSSpage.css
@@ -144,9 +144,7 @@ main .introduction .sidebar {
     height: 10rem;
     border-radius: 50%;
     background-color: #E58D83;
-    margin-top: 2rem;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -212,10 +210,10 @@ main .introduction .sidebar {
     row-gap: 2rem;
 }
 
-.heading {
+.projectSection .heading {
     width: 100%;
-    height: 15vh;
     padding-left: 12rem;
+    margin-bottom: 1rem;
     font-size: 2.8rem;
     font-weight: 800;
 
@@ -391,7 +389,7 @@ footer .personalInfo span:nth-of-type(2) {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 3rem;
+    row-gap: 2rem;
 }
 
 .skillSection .heading {
@@ -399,6 +397,7 @@ footer .personalInfo span:nth-of-type(2) {
     padding: 0;
     font-size: 2.8rem;
     font-weight: 800;
+    margin-bottom: 1rem;
 }
 
 .skillSection .technologies {
@@ -440,13 +439,13 @@ footer .personalInfo span:nth-of-type(2) {
 
 /* Responsive Designs */
 @media (max-width:480px) {
-    nav{
+    nav {
         padding: 1rem;
-        font-size: 0.5rem;
+        font-size: 0.4rem;
     }
 
-    .nav-icon{
-        font-size: 0.6rem;
+    .nav-icon {
+        font-size: 0.4rem;
         margin-left: 0.3rem;
     }
 
@@ -455,13 +454,13 @@ footer .personalInfo span:nth-of-type(2) {
         margin-right: 1rem;
     }
 
-    nav a:nth-of-type(2){
+    nav a:nth-of-type(2) {
         margin: 0;
         margin-left: auto;
     }
 
-    nav button{
-        font-size: 0.6rem;
+    nav button {
+        font-size: 0.7rem;
         padding-top: 0.3rem;
         padding-bottom: 0.3rem;
         padding-left: 0.5rem;
@@ -469,40 +468,47 @@ footer .personalInfo span:nth-of-type(2) {
     }
 
     /* introduction */
-    main{
+    main {
         padding: 1rem;
     }
 
-    main .introduction{
+    main .introduction {
         height: auto;
     }
 
-    main .introduction .sidebar{
+    main .introduction .sidebar {
         display: none;
     }
 
-    main .introduction .introContent{
+    main .introduction .introContent {
         flex-direction: column-reverse;
     }
 
-    .introContent .introContentLeft, .introContent .introContentRight{
+    .introContent .introContentLeft,
+    .introContent .introContentRight {
         width: 100%;
         padding: 0;
         align-items: center;
     }
 
-    .introContent .introContentLeft .name{
+    .introContent .introContentLeft .name {
         width: auto;
         justify-content: center;
-        font-size: 3.2rem;
+        font-size: 3rem;
     }
 
-    .introContentLeft .about{
+    .introContentLeft .about {
         width: 100%;
+        font-size: 0.9rem;
     }
 
-    .logo{
-        display: none;
+    .logo {
+        width: 7rem;
+        height: 7rem;
+    }
+
+    .logo .inner {
+        font-size: 1rem;
     }
 
     .introContent .introContentRight span img {
@@ -511,67 +517,75 @@ footer .personalInfo span:nth-of-type(2) {
     }
 
     /* Projects */
-    .projectSection .heading{
+    .projectSection .heading {
+        font-size: 2rem;
         padding: 0;
         justify-content: center;
     }
 
-    .projectSection .projects{
+    .projectSection .projects {
         padding: 0;
     }
 
-    .projects .project{
+    .projects .project {
         width: 100%;
     }
 
-    .project .rightPart{
+    .project .rightPart {
         padding-top: 1rem;
         padding-bottom: 1rem;
+        row-gap: 0.8rem;
     }
 
-    .project .rightPart .title{
-        font-size: 1.2rem;
+    .project .rightPart .title {
+        font-size: 1rem;
     }
 
-    .project .rightPart .description{
-        font-size: 0.7rem;
-    }
-
-    .project .rightPart .technologies span{
+    .project .rightPart .description {
         font-size: 0.5rem;
+    }
+
+    .project .rightPart .technologies span {
+        font-size: 0.3rem;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
-        padding-top: 0.3rem;
-        padding-bottom: 0.3rem;
+        padding-top: 0.2rem;
+        padding-bottom: 0.2rem;
+        border-radius: 0.2rem;
     }
 
-    .skillSection .heading{
-        font-size: 2rem;
+    /* skill section */
+    .skillSection {
+        padding-top: 0;
     }
 
-    .skillSection .technologies{
+    .skillSection .heading {
+        font-size: 1.5rem;
+    }
+
+    .skillSection .technologies {
         padding: 0;
     }
 
-    .technologies .tech img{
+    .technologies .tech img {
         width: 4.8rem;
         height: 4.8rem;
     }
 
     /* footer  */
-    footer h2{
+    footer h2 {
         font-size: 1.5rem;
     }
 
-    footer .personalInfo{
+    footer .personalInfo {
         font-size: 0.7rem;
     }
 
-    footer .personalInfo span:nth-of-type(2){
+    footer .personalInfo span:nth-of-type(2) {
         font-size: 0.9rem;
     }
 
-    .footer-icons{
+    .footer-icons {
         font-size: 1.3rem;
     }
 
