--- a/myPortfolio/CSSpage.css
+++ b/myPortfolio/CSSpage.css
@@ -144,7 +144,9 @@ main .introduction .sidebar {
     height: 10rem;
     border-radius: 50%;
     background-color: #E58D83;
-    margin: auto;
+    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -505,6 +507,7 @@ footer .personalInfo span:nth-of-type(2) {
     .logo {
         width: 7rem;
         height: 7rem;
+        margin: auto;
     }
 
     .logo .inner {
